--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,18 @@
 }
 
 /* REGOLE RICORRENTI DI PAGINA */
-
-/* REGOLE div.container */
-body > div.container {
+.container-flex {
   display: flex;
 }
+
 /* REGOLE HEADER/CTA */
-header.container-flex {
+main.container-flex .cta{
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-
+  height: 80px;
+  width: calc(100vw - 200px);
 }
 
-header.container-flex button{
+main.container-flex button{
   background-color: rgba(0, 0, 0, 0);
   padding: 10px;
   border: 1px solid white;
@@ -25,7 +24,45 @@ header.container-flex button{
 }
 /* REGOLE NAV MENU */
 
+
+main .menu {
+  width: 200px;
+  min-height: calc(100vh - 100px);
+  background-color: #191414;
+  color: white;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+main .menu a {
+  text-decoration: none;
+  color: white;
+}
+main .menu img {
+  width: 35px;
+}
+
+main .menu #logo img {
+  width: 170px;
+}
+
+
+main .menu #profile-signin {
+  align-self: flex-end;
+}
+main .menu #profile-signin h3 , main .menu #profile-signin h4 {
+  display: inline-block;
+}
+main .menu #profile-signin img {
+  width: 20px;
+  height: auto;
+}
 /* REGOLE CENTRAL CONTENT BLOCK */
+
+main{
+  justify-content: flex-start;
+}
+
 main .central-content {
   overflow: scroll;
 }
