--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,9 @@
 }
 
 /* REGOLE HEADER/CTA */
-main.container-flex .cta{
+main.container-flex .cta-top{
+  position: fixed;
+  margin-left:200px;
   background-color: rgba(0, 0, 0, 0.5);
   height: 80px;
   width: calc(100vw - 200px);
@@ -33,6 +35,7 @@ main .menu {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  position: fixed;
 }
 main .menu a {
   text-decoration: none;
@@ -64,6 +67,50 @@ main{
 }
 
 main .central-content {
+  width: calc(100vw - 200px);
+  margin-left: 200px;
+  margin-top: 80px;
+  align-self: center;
   overflow: scroll;
+  background-color: #141922;
+  color: white;
+  align-self:auto;
+  display: flex;
+  flex-direction: column;
+}
+
+main .central-content nav ul {
+  list-style-type: none;
+  width: 100%;
+}
+
+main .central-content  nav ul li {
+  display: inline-block;
+}
+
+main .central-content  nav ul li a {
+  color:#a3a3a3;
+  text-decoration: none;
+}
+
+main .central-content  nav ul li .green-bar-active , main .central-content  nav ul li .green-bar {
+  height: 5px;
+  background-color: #1DB954;
+  width: 50px;
+}
+
+main .central-content  nav ul li .green-bar {
+  display: none;
+}
+
+main .central-content .music-cover {
+  display: flex;
+}
+main .central-content .music-cover .cover-card  {
+  width: calc(100% / 6)
+}
+main .central-content .music-cover .cover-card img {
+ width: 90%;
+ height: auto;
 }
 /* REGOLE PLAYER BAR */
