--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@ main .menu {
   background-color: #191414;
   color: white;
   display: flex;
-  justify-content: flex-start;
   flex-direction: column;
   position: fixed;
 }
@@ -49,9 +48,16 @@ main .menu #logo img {
   width: 170px;
 }
 
+main .menu .side-bar {
+  flex: 1 0 auto;
+}
+
+main .menu .side-bar > a {
+  display:block
+}
 
 main .menu #profile-signin {
-  align-self: flex-end;
+
 }
 main .menu #profile-signin h3 , main .menu #profile-signin h4 {
   display: inline-block;
@@ -114,3 +120,18 @@ main .central-content .music-cover .cover-card img {
  height: auto;
 }
 /* REGOLE PLAYER BAR */
+.player {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  width: 100%;
+  background-color: #171b1b;
+  color: white;
+}
+
+.player img {
+  width: 45px;
+  height: auto;
+}
