--- a/css/main.css
+++ b/css/main.css
@@ -17,16 +17,20 @@ body {
 main.container-flex .cta-top{
   position: fixed;
   margin-left:200px;
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(28, 28, 28, 0.8);
   height: 80px;
   width: calc(100vw - 200px);
 }
 
 main.container-flex button{
+  margin-top: 20px;
+  margin-right: 30px;
   background-color: rgba(0, 0, 0, 0);
   padding: 10px;
   border: 1px solid white;
   border-radius: 50px;
+  float: right;
+
 }
 /* REGOLE NAV MENU */
 
@@ -102,22 +106,52 @@ main .central-content {
   width: calc(100vw - 200px);
   margin-left: 200px;
   margin-top: 80px;
-  align-self: center;
+  margin-bottom: 100px;
   overflow: scroll;
   background-color: #141922;
   color: white;
   align-self:auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+}
+main .central-content h2 {
+  font-size: 35px;
+  padding: 10px 5px;
+}
+
+main .central-content h3 {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+main .central-content .music-cover h4 {
+  font-size: 15px;
+}
+
+main .central-content h3 , main .central-content .music-cover h4 {
+  text-align: center;
+}
+
+main .central-content nav {
+    align-self: center;
+    padding: 10px;
 }
 
 main .central-content nav ul {
   list-style-type: none;
   width: 100%;
+
 }
 
 main .central-content  nav ul li {
   display: inline-block;
+  padding: 5px;
+}
+
+main .central-content  nav ul li:first-child a{
+  font-weight: bold;
 }
 
 main .central-content  nav ul li a {
@@ -125,26 +159,54 @@ main .central-content  nav ul li a {
   text-decoration: none;
 }
 
+
+
 main .central-content  nav ul li .green-bar-active , main .central-content  nav ul li .green-bar {
+  text-align: center;
   height: 5px;
   background-color: #1DB954;
   width: 50px;
+  margin: auto;
 }
 
 main .central-content  nav ul li .green-bar {
   display: none;
 }
 
+main .central-content  nav ul li a:hover {
+  font-weight: bold;
+}
+
+main .central-content  nav ul li a:hover .green-bar {
+  display: block;
+}
+
 main .central-content .music-cover {
   display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+main .central-content .music-cover-suggest {
+  display: flex;
+}
+
+main .central-content .music-cover-suggest .cover-card {
+  padding: 20px;
 }
 main .central-content .music-cover .cover-card  {
-  width: calc(100% / 6)
+  width: calc((100% / 6) - 40px)
 }
+
 main .central-content .music-cover .cover-card img {
- width: 90%;
+ width: 100%;
  height: auto;
 }
+
+main .central-content #rounded-pics .music-cover-suggest .cover-card img {
+  border-radius: 50%;
+}
+
+
 /* REGOLE PLAYER BAR */
 .player {
   position: fixed;
