--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,9 @@ main.container-flex button{
 
 }
 /* REGOLE NAV MENU */
-
+main .menu .xs {
+  display: none;
+}
 
 main .menu {
   width: 200px;
@@ -103,7 +105,10 @@ main .menu .side-bar > div a {
 }
 
 main .menu #profile-signin {
-
+position: absolute;
+bottom: 0;
+background-color: #191414;
+z-index: 2;
 }
 main .menu #profile-signin h3 , main .menu #profile-signin h4 {
   display: inline-block;
@@ -132,6 +137,7 @@ main .central-content {
   flex-direction: column;
   justify-content: space-around;
 }
+
 main .central-content h2 {
   font-size: 35px;
   padding: 10px 5px;
@@ -206,6 +212,8 @@ main .central-content .music-cover {
 }
 
 main .central-content .music-cover .cover-card {
+  display: flex;
+  flex-direction: column;
   flex-shrink: 0;
 }
 
@@ -214,19 +222,46 @@ main .central-content .music-cover-suggest {
 }
 
 main .central-content .music-cover-suggest .cover-card {
-  padding: 20px;
+  margin: 20px;
 }
-main .central-content .music-cover .cover-card  {
+
+main .central-content .music-cover .cover-card ,
+main .central-content .music-cover-suggest .cover-card ,
+main .central-content #rounded-pics .music-cover-suggest .cover-card {
+  display: flex;
+  flex: 0 0 241px;
+  flex-wrap: wrap;
+  position: relative;
   width: calc((100% / 6) - 40px)
 }
 
 main .central-content img {
- width: 177px;
- height: auto;
+  width: 241px;
+  height: auto;
+}
+
+main .central-content .music-cover .cover-card .overlay{
+    display: none;
+
+}
+
+main .central-content .music-cover .cover-card:hover .overlay{
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 241px;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+}
+
+main .central-content .music-cover .cover-card .overlay i {
+  font-size: 50px;
+  align-self: center;
 }
 
 main .central-content #rounded-pics .music-cover-suggest .cover-card img {
   border-radius: 50%;
+  padding: 10px;
 }
 
 
@@ -364,4 +399,37 @@ main .central-content #rounded-pics .music-cover-suggest .cover-card img {
 
 .player .volume-bar .progression-bar {
   align-self: center;
+}
+
+
+/* media queries */
+@media all and (max-width: 568px) {
+  main .central-content , main.container-flex .cta-top {
+    width: calc(100vw - 50px);
+    margin-left: 50px;
+  }
+
+  main .menu #logo ,
+  main .menu #profile-signin ,
+  main .menu .sidebar ,
+  main .menu > div ,
+  main .menu h2{
+    display: none;
+  }
+
+  main .menu {
+    width: 50px;
+  }
+
+  main .menu .grow{
+    flex-grow: 1;
+  }
+
+
+  main .menu .xs {
+    display: block;
+    width: 50px;
+    height: auto;
+
+  }
 }
