--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ main.container-flex .cta-top{
   background-color: rgba(8, 11, 18, 0.95);
   height: 80px;
   width: calc(100vw - 200px);
+  z-index: 99
 }
 
 main.container-flex button{
@@ -253,7 +254,7 @@ main .central-content .music-cover .cover-card:hover .overlay{
   display: flex;
   position: absolute;
   width: 100%;
-  height: 241px;
+  height: 200px;
   background: rgba(0, 0, 0, 0.5);
   justify-content: center;
 }
